[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/fonts/LG_70_shadow.tres" type="DynamicFont" id=1]
[ext_resource path="res://src/game/game_ui/game_ui.gd" type="Script" id=2]
[ext_resource path="res://assets/fonts/LG_90_shadow.tres" type="DynamicFont" id=3]
[ext_resource path="res://src/game/game_ui/pause_panel/PausePanel.tscn" type="PackedScene" id=4]
[ext_resource path="res://src/game/game_ui/game_over_panel/GameOverPanel.tscn" type="PackedScene" id=5]

[node name="GameUI" type="CanvasLayer"]
script = ExtResource( 2 )

[node name="UIRoot" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="UIRoot"]
anchor_right = 1.0
margin_bottom = 100.0
mouse_filter = 2
custom_constants/margin_right = 20
custom_constants/margin_top = 20
custom_constants/margin_left = 20
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="UIRoot/MarginContainer"]
margin_left = 20.0
margin_top = 20.0
margin_right = 556.0
margin_bottom = 100.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="PauseButton" type="RichTextLabel" parent="UIRoot/MarginContainer/HBoxContainer"]
margin_right = 90.0
margin_bottom = 80.0
rect_min_size = Vector2( 90, 0 )
custom_fonts/normal_font = ExtResource( 3 )
custom_colors/font_color_shadow = Color( 0.627451, 0.627451, 0.627451, 1 )
custom_constants/shadow_offset_x = 3
custom_constants/shadow_offset_y = 3
bbcode_enabled = true
bbcode_text = "[center][url]II[/url][/center]"
meta_underlined = false
text = "II"
scroll_active = false

[node name="Separator" type="Control" parent="UIRoot/MarginContainer/HBoxContainer"]
margin_left = 94.0
margin_right = 232.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 0

[node name="VBoxContainer" type="VBoxContainer" parent="UIRoot/MarginContainer/HBoxContainer"]
margin_left = 236.0
margin_right = 536.0
margin_bottom = 80.0
alignment = 1

[node name="ScoreLabel" type="RichTextLabel" parent="UIRoot/MarginContainer/HBoxContainer/VBoxContainer"]
margin_top = 10.0
margin_right = 300.0
margin_bottom = 70.0
rect_min_size = Vector2( 300, 60 )
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 5
custom_fonts/normal_font = ExtResource( 1 )
custom_colors/font_color_shadow = Color( 0.627451, 0.627451, 0.627451, 1 )
custom_constants/shadow_offset_x = 3
custom_constants/shadow_offset_y = 3
bbcode_enabled = true
bbcode_text = "[right]0[/right] "
meta_underlined = false
text = "0 "
scroll_active = false

[node name="PausePanel" parent="." instance=ExtResource( 4 )]

[node name="GameOverPanel" parent="." instance=ExtResource( 5 )]
[connection signal="meta_clicked" from="UIRoot/MarginContainer/HBoxContainer/PauseButton" to="." method="_on_PauseButton_meta_clicked"]
